Se agrega informacion real a la pagina para personal page

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -17,38 +17,38 @@
                     <span class="icon-menu"></span>
                     <span class="icon-menu"></span>
                 </button>
-                <a href="index.html" class="navbar-brand"><img src="~/img/logo.png" alt=""></a>
+                <a href="index.html" class="navbar-brand"><img src="~/img/SofiaLogo.png" width="30%" alt=""></a>
             </div>
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="onepage-nev navbar-nav mr-auto w-100 justify-content-end clearfix">
                     <li class="nav-item active">
                         <a class="nav-link" href="#hero-area">
-                            Home
+                            Principal
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">
-                            About
+                            Acerca
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#services">
-                            Services
+                            Habilidades
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#resume">
-                            Resume
+                            Trayectoria
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#portfolios">
-                            Work
+                            Trabajo
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">
-                            Contact
+                            Contacto
                         </a>
                     </li>
                 </ul>
@@ -58,22 +58,22 @@
         <!-- Mobile Menu Start -->
         <ul class="onepage-nev mobile-menu">
             <li>
-                <a href="#home">Home</a>
+                <a href="#home">Principal</a>
             </li>
             <li>
-                <a href="#about">about</a>
+                <a href="#about">Acerca</a>
             </li>
             <li>
-                <a href="#services">Services</a>
+                <a href="#services">Habilidaes</a>
             </li>
             <li>
-                <a href="#resume">resume</a>
+                <a href="#resume">Trayectoria</a>
             </li>
             <li>
-                <a href="#portfolio">Work</a>
+                <a href="#portfolio">Trabajo</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="#contact">Contacto</a>
             </li>
         </ul>
         <!-- Mobile Menu End -->
@@ -86,9 +86,9 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12 text-center">
                     <div class="contents">
-                        <h5 class="script-font wow fadeInUp" data-wow-delay="0.2s">Hi This is</h5>
-                        <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Tom Saulnier</h2>
-                        <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Front-end Web Developer and Graphic Designer</p>
+                        <h5 class="script-font wow fadeInUp" data-wow-delay="0.2s">Hola, yo soy </h5>
+                        <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Sofía Niño Peña</h2>
+                        <p class="script-font wow fadeInUp" data-wow-delay="0.6s">Psicóloga Profesional</p>
                         <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                             <li>
                                 <a class="facebook" href="#"><i class="icon-social-facebook"></i></a>
@@ -107,7 +107,7 @@
                             </li>
                         </ul>
                         <div class="header-button wow fadeInUp" data-wow-delay="1s">
-                            <a href="#" class="btn btn-common">Get a Free Quote</a>
+                            <a href="#" class="btn btn-common">Conoceme</a>
                         </div>
                     </div>
                 </div>
@@ -124,27 +124,33 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 <div class="img-thumb wow fadeInLeft" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="~/img/about/about-1.jpg" alt="">
+                    <img class="img-fluid" src="~/img/SofiaFoto.jpg" alt="">
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
-                    <h3>Hi Guys!</h3>
-                    <p>Est diam venenatis arcu lacus ad. Duis quis eros. Cursus et rutrum eleifend sollicitudin lacinia justo id turpis. Nec convallis integer. Odio eget duis. Nulla aenean et. Blandit varius sollicitudin. Pellentesque leo primis neque urna magnis. Elit ut sollicitudin. Et est a nam dolores eget itaque sagittis et parturient duis est eleifend sociis rutrum odio viverra integer.</p>
+                    <h3>Hola a todos!</h3>
+                    <p>
+                        Soy Psicóloga de la Universidad Externado de Colombia, destaca por su compromiso y dedicación en
+                        diversas áreas de la profesión y sus respectivos enfoques: cognitivo-conductual, histórico-cultural, social,
+                        clínico, sistémico y organizacional. Además, cuenta con conocimientos en el uso de herramientas como
+                        entrevista clínica, entrevista conductual, desarrollo de conversaciones reflexivas, ejecución de
+                        entrevistas estructuradas y semiestructuradas, diseño de metodologías asociadas a la neurociencia social
+                        y la investigación interdisciplinar.
+                    </p>
                     <div class="about-profile">
                         <ul class="admin-profile">
-                            <li><span class="pro-title"> Name </span> <span class="pro-detail">Tom Saulnier</span></li>
-                            <li><span class="pro-title"> Age </span> <span class="pro-detail">25 Years</span></li>
-                            <li><span class="pro-title"> Experience </span> <span class="pro-detail">4 Years</span></li>
-                            <li><span class="pro-title"> Country </span> <span class="pro-detail">USA</span></li>
-                            <li><span class="pro-title"> Location </span> <span class="pro-detail">San Francisco, CA</span></li>
-                            <li><span class="pro-title"> e-mail </span> <span class="pro-detail">email@example.com</span></li>
-                            <li><span class="pro-title"> Phone </span> <span class="pro-detail">+ (00) 123 456 789</span></li>
-                            <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
+                            <li><span class="pro-title"> Nombre </span> <span class="pro-detail">Sofia Niño</span></li>
+                            <li><span class="pro-title"> Edad </span> <span class="pro-detail">22 Años</span></li>
+                            <li><span class="pro-title"> Experiencia </span> <span class="pro-detail">2 Años</span></li>
+                            <li><span class="pro-title"> Pais </span> <span class="pro-detail">Colombia</span></li>
+                            <li><span class="pro-title"> Ciudad </span> <span class="pro-detail">Bogotá</span></li>
+                            <li><span class="pro-title"> Correo electrónico </span> <span class="pro-detail">s.ninopena.psico@outlook.com </span></li>
+                            <li><span class="pro-title"> Telefono </span> <span class="pro-detail">+ (67) 318 419 9752 </span></li>                            
                         </ul>
                     </div>
-                    <a href="#" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
-                    <a href="#" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
+                    <a href="#" class="btn btn-common"><i class="icon-paper-clip"></i> Descargar CV</a>
+                    <a href="#" class="btn btn-danger"><i class="icon-speech"></i> Contáctame</a>
                 </div>
             </div>
         </div>
@@ -153,7 +159,7 @@
 <!-- About Section End -->
 <!-- Services Section Start -->
 <section id="services" class="services section-padding">
-    <h2 class="section-title wow flipInX" data-wow-delay="0.4s">What I do</h2>
+    <h2 class="section-title wow flipInX" data-wow-delay="0.4s">Qué hago</h2>
     <div class="container">
         <div class="row">
             <!-- Services item -->
@@ -163,7 +169,7 @@
                         <i class="icon-grid"></i>
                     </div>
                     <div class="services-content">
-                        <h3><a href="#">Front-end Development</a></h3>
+                        <h3><a href="#">Entrevista Clínica</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
                     </div>
                 </div>
@@ -175,7 +181,7 @@
                         <i class="icon-layers"></i>
                     </div>
                     <div class="services-content">
-                        <h3><a href="#">Graphic Design</a></h3>
+                        <h3><a href="#">Entrevista Conductual</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
                     </div>
                 </div>
@@ -187,7 +193,7 @@
                         <i class="icon-briefcase"></i>
                     </div>
                     <div class="services-content">
-                        <h3><a href="#">Business Branding</a></h3>
+                        <h3><a href="#">Conversación Reflexiva</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
                     </div>
                 </div>
@@ -199,7 +205,7 @@
                         <i class="icon-bubbles"></i>
                     </div>
                     <div class="services-content">
-                        <h3><a href="#">Consultancy</a></h3>
+                        <h3><a href="#">Entrevista Estructurada</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
                     </div>
                 </div>
@@ -217,26 +223,26 @@
                     <ul class="timeline">
                         <li>
                             <i class="icon-graduation"></i>
-                            <h2 class="timelin-title">Education</h2>
-                        </li>
+                            <h2 class="timelin-title">Educación</h2>
+                        </li>                        
                         <li>
                             <div class="content-text">
-                                <h3 class="line-title">Bsc In CSE - Yale University</h3>
-                                <span>2012 - 2016</span>
+                                <h3 class="line-title">UNIVERSIDAD EXTERNADO DE COLOMBIA</h3>
+                                <span> 2019-2023 </span>
+                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                            </div>
+                        </li>                        
+                        <li>
+                            <div class="content-text">
+                                <h3 class="line-title">Tercer Curso Internacional de Neurociencia Social</h3>
+                                <span> 2019-2019 </span>
                                 <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
                             </div>
                         </li>
                         <li>
                             <div class="content-text">
-                                <h3 class="line-title">Higher Secondary School - San Francisco College</h3>
-                                <span>2010 - 2012</span>
-                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="content-text">
-                                <h3 class="line-title">Secondary School - Labratory High School</h3>
-                                <span>2005 - 2010</span>
+                                <h3 class="line-title">COLEGIO LORENCITA VILLEGAS DE SANTOS</h3>
+                                <span>2008 – 2018</span>
                                 <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
                             </div>
                         </li>
@@ -248,27 +254,44 @@
                     <ul class="timeline">
                         <li>
                             <i class="icon-briefcase"></i>
-                            <h2 class="timelin-title">Experience</h2>
+                            <h2 class="timelin-title">Experiencia</h2>
                         </li>
                         <li>
                             <div class="content-text">
-                                <h3 class="line-title">Art Director - Tesla Inc.</h3>
-                                <span>Jan 2018 - Present</span>
-                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                                <h3 class="line-title">Orientación psicológica y formación en batería <br> <br> <br>psicosocial - Envía SAS.</h3>
+                                <span>Enero 2023 – Mayo 2023 </span>
+                                <p class="line-text">
+                                    Practicante de psicología, apoyo a la coordinación nacional de riesgo psicosocial.
+                                    Acompañamiento en aplicación de batería psicosocial. Desarrollo, planeación y ejecución de
+                                    capacitaciones basadas en buscar la calidad de vida en el trabajo y la promoción y prevención de la salud
+                                    mental.
+                                </p>
                             </div>
                         </li>
                         <li>
                             <div class="content-text">
-                                <h3 class="line-title">UX/UI Designer - Samsung</h3>
-                                <span>Nov 2016 - Dec 2017</span>
-                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                                <h3 class="line-title">Orientación escolar - Institución Educativa León XIII</h3>
+                                <span>Febrero 2022 – Mayo 2022</span>
+                                <p class="line-text">
+                                    Desde el Plan de Orientación Escolar (POE), se establecían actividades que vinculen
+                                    el trabajo de orientación psicológica para la formación y acompañamiento de estudiantes. Se realizan
+                                    proyectos transversales para estudiantes y docentes que giren en torno a la superación de dificultades
+                                    académicas, el manejo de técnicas de estudio, manejo de tiempo, salud sexual y promoción y prevención
+                                    de salud mental. Se realizó una escuela de padres con los mismos ejes del ítem anterior.
+                                </p>
                             </div>
                         </li>
                         <li>
                             <div class="content-text">
-                                <h3 class="line-title">Intern UI Designer - UIdeck</h3>
-                                <span>Mar 2015 - Oct 2016</span>
-                                <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                                <h3 class="line-title">Acompañamiento a niños y niñas migrantes venezolanos <br> <br /> <br /> - Fundación Procesar</h3>
+                                <span>Julio 2021 – Noviembre 2021 </span>
+                                <p class="line-text">
+                                    Apoyo psicocial focalizado en niños, niñas y adolescentes que se encuentran en
+                                    territorio vulnerable dentro de la cuidad de Bogotá, propiamente en la localidad de Santafé, además, se
+                                    hace seguimiento de su trayectoria diaria y su vinculación a instituciones educativas. Finalmente se
+                                    aplican una serie de actividades lúdicas que permitan ver cómo se encuentra en niño a nivel cognitivo
+                                    según su edad y sus condiciones actuales.  .
+                                </p>
                             </div>
                         </li>
                     </ul>
@@ -282,22 +305,22 @@
 <section id="portfolios" class="section-padding">
     <!-- Container Starts -->
     <div class="container">
-        <h2 class="section-title wow flipInX" data-wow-delay="0.4s">My Remarkable Works</h2>
+        <h2 class="section-title wow flipInX" data-wow-delay="0.4s">Mis trabajos notables</h2>
         <div class="row">
             <div class="col-md-12">
                 <!-- Portfolio Controller/Buttons -->
                 <div class="controls text-center">
                     <a class="filter active btn btn-common" data-filter="all">
-                        All
+                        Todo
                     </a>
                     <a class="filter btn btn-common" data-filter=".design">
-                        Design
+                        Acompañamiento
                     </a>
                     <a class="filter btn btn-common" data-filter=".development">
-                        Development
+                        Orientación
                     </a>
                     <a class="filter btn btn-common" data-filter=".print">
-                        Print
+                        Apoyo
                     </a>
                 </div>
                 <!-- Portfolio Controller/Buttons Ends-->
